# server/controllers/index.go
@@ -141,6 +141,11 @@ func FoodMenuByHandler(w http.ResponseWriter, r *http.Request) {
 		food.DeleteFoodMenu(w, r, path)
 		break
 	case "GET":
+		dateStr := strings.TrimPrefix(r.URL.Path, "/data/food-menu/")
+		if dateStr != "" {
+			food.GetFoodMenuByDate(w, r)
+			break
+		}
 		food.GetFoodMenu(w, r)
 		break
 	default:
