# server/docs/swagger.yaml
@@ -368,10 +368,14 @@ paths:
     get:
       consumes:
       - '*/*'
-      description: Retrieves the daily schedule image for the current date from the
-        database
+      parameters:
+      - description: The date for which to retrieve the daily schedule in the format
+          'YYYY-MM-DD'. If not provided, the current date is used.
+        in: query
+        name: date
+        type: string
       produces:
-      - image/jpeg
+      - text/html
       responses:
         "200":
           description: OK
@@ -389,7 +393,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Get the daily schedule image for the current date
+      summary: Get the daily schedule HTML template for the specified date or the
+        current date
       tags:
       - DailySchedule
     post:
@@ -590,6 +595,42 @@ paths:
       security:
       - Bearer: []
       summary: Delete a food menu
+      tags:
+      - FoodMenu
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the breakfast, lunch, and dinner menu for a specific
+        date from the database
+      parameters:
+      - description: The date of the food menu (YYYY-MM-DD)
+        in: path
+        name: date
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/databaseTypes.FoodMenu'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       tags:
       - FoodMenu
   /data/food-menu/{id}:
@@ -850,8 +891,6 @@ paths:
           description: Internal server error
           schema:
             type: string
-      security:
-      - Bearer: []
       summary: Get a list of items from the School Store
       tags:
       - School Store
@@ -1086,7 +1125,7 @@ paths:
             type: string
       summary: Delete a lost and found item
       tags:
-      - Lost and Found
+      - LostAndFound
 securityDefinitions:
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
